frostwire (5.1.0) stable; urgency=high

  * Search results now arrive under 200ms, aka, Instant Search.
  * New FrostWire "Smart Torrent" search. FrostWire will search inside
    top matching torrents for individual files matching the current query.
  * Core upgrade, if a .torrent fails to download from its HTTP location
    FrostWire will download it from the DHT if it can find it there.
  * UX upgrade, ability to hide/show seeding torrents on transfer manager.
  * UX upgrade, Phone & Tablets desktop explorer asks before deleting files.
  * UX upgrade, New file "Extension" column on search results.
  * UX upgrade, Search tabs now have animated indicator to let user know
    a search is still going on.
  * UX fix, search results can now be sorted by file type.
  * TPB has been added to the list of search engines.
  * Mininova is back.

 -- FrostWire Team <contact@frostwire.com>  Wed, 17 Aug 2011 09:26:59 -0500

frostwire (5.0.8) stable; urgency=high

  * Shows torrent details after a download starts to bring traffic back
    to the search engine that provided the result as a default setting.
  * Shows FrostWire icon for search results to which we can't resolve the
    file extension.
  * Removes Mininova from search engines.

 -- FrostWire Team <contact@frostwire.com>  Sat, 16 Jul 2011 19:41:08 -0500

frostwire (5.0.7) stable; urgency=high

  * UX upgrade, send file or send folder support when a file or folder
    is dropped on FrostWire.
  * UX upgrade, file choosing dialogs on Mac now also show mounted volumes.
  * UX upgrade, playback support for m4a files.
  * UX upgrade, search result filters re-arranged.
  * UX upgrade, main search button gone, updated search text box to include
    clickable search icon.
  * UX upgrade, filters re-arranged.
  * UX upgrade, searches can be up to 50 characters long.
  * UX upgrade, either disconnected or turbocharged, no idle state.
  * UX upgrade, search as you type on the library, no more search button.